--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body, h1, h3 {
 
 body {
   color: #ffffff;
-  background-image: url("thay22.gif.crdownload");
+  background-image: url("./thsdytt.gif");
   font-family: "Inconsolata", monospace;
 }
 
